<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SwitchPitchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/switchpitch_row_1"
                style="@style/SwitchPitchLinearLayout">

                <android.support.v7.widget.CardView
                    android:id="@+id/switchpitch_blue_yellow"
                    style="@style/SwitchPitchCardViewStyle"
                    android:onClick="onSwitchPitchClick">

                    <ImageView
                        style="@style/SwitchPitchImageViewStyle"
                        android:contentDescription="@string/ball_description_for_imageView"
                        android:src="@drawable/switchpitch_blue_yellow" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/switchpitch_blue_green"
                    style="@style/SwitchPitchCardViewStyle"
                    android:onClick="onSwitchPitchClick">

                    <ImageView
                        style="@style/SwitchPitchImageViewStyle"
                        android:contentDescription="@string/ball_description_for_imageView"
                        android:src="@drawable/switchpitch_blue_green" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/switchpitch_row_2"
                style="@style/PlayerLinearLayoutStyle"
                android:layout_below="@id/switchpitch_row_1">

                <android.support.v7.widget.CardView
                    android:id="@+id/switchpitch_skyblue_pink"
                    style="@style/SwitchPitchCardViewStyle"
                    android:onClick="onSwitchPitchClick">

                    <ImageView
                        style="@style/SwitchPitchImageViewStyle"
                        android:contentDescription="@string/ball_description_for_imageView"
                        android:src="@drawable/switchpitch_skyblue_pink" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/switchpitch_green_orange"
                    style="@style/SwitchPitchCardViewStyle"
                    android:onClick="onSwitchPitchClick">

                    <ImageView
                        style="@style/SwitchPitchImageViewStyle"
                        android:contentDescription="@string/ball_description_for_imageView"
                        android:src="@drawable/switchpitch_green_orange" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/next_button"
        android:onClick="previousActivity"
        android:text="@string/previous_textView" />

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/next_button"
        android:onClick="nextActivity"
        android:text="@string/next_textView" />

</RelativeLayout>