<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/player_row_1"
                style="@style/PlayerLinearLayoutStyle">

                <android.support.v7.widget.CardView
                    android:id="@+id/player_gilfoyle"
                    style="@style/PlayerCardViewStyle"
                    android:onClick="onPlayerClick">

                    <ImageView
                        style="@style/PlayerImageViewStyle"
                        android:contentDescription="@string/player_description_for_imageView"
                        android:src="@drawable/gilfoyle" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/player_richard"
                    style="@style/PlayerCardViewStyle"
                    android:onClick="onPlayerClick">

                    <ImageView
                        style="@style/PlayerImageViewStyle"
                        android:contentDescription="@string/player_description_for_imageView"
                        android:src="@drawable/richard" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/player_row_2"
                style="@style/PlayerLinearLayoutStyle"
                android:layout_below="@id/player_row_1">

                <android.support.v7.widget.CardView
                    android:id="@+id/player_dinesh"
                    style="@style/PlayerCardViewStyle"
                    android:onClick="onPlayerClick">

                    <ImageView
                        style="@style/PlayerImageViewStyle"
                        android:contentDescription="@string/player_description_for_imageView"
                        android:src="@drawable/dinesh" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/player_erlich"
                    style="@style/PlayerCardViewStyle"
                    android:onClick="onPlayerClick">

                    <ImageView
                        style="@style/PlayerImageViewStyle"
                        android:contentDescription="@string/player_description_for_imageView"
                        android:src="@drawable/erlich" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/player_row_3"
                style="@style/PlayerLinearLayoutStyle"
                android:layout_below="@id/player_row_2">

                <android.support.v7.widget.CardView
                    android:id="@+id/player_jared"
                    style="@style/PlayerCardViewStyle"
                    android:onClick="onPlayerClick">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            style="@style/PlayerImageViewStyle"
                            android:contentDescription="@string/player_description_for_imageView"
                            android:src="@drawable/jared" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/player_row_3"
                android:layout_margin="@dimen/generic_margin"
                android:onClick="previousActivity"
                android:text="@string/previous_textView" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/player_row_3"
                android:layout_margin="@dimen/generic_margin"
                android:onClick="nextActivity"
                android:text="@string/next_textView" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>